--- a/FoodMS/src/main/resources/application.properties
+++ b/FoodMS/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #connect to MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/FoodBox
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=username
+spring.datasource.password=password
 
 #JPA
 # create :  if schema already exist drop the current schema and create new schema otherwise create the new Schema
@@ -18,4 +18,4 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-server.port=8082
+server.port=8080
